# bigbrotr

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  .trivyignore  .yamllint  .yamllint.yaml  AGENTS.md  BIGBROTR_REPOSITORY_BIBLE.md  CHANGELOG.md  CLAUDE.md  CNAME  CODEBASE_GUIDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOSTR_NIPS_DEEP_ANALYSIS.md  PROJECT_GUIDE.md  PROJECT_SPECIFICATION.md  PROJECT_VISION_AND_REDESIGN_PLAN.md  README.md  REVIEW.md  WOTATHON_SUBMISSION.txt  codecov.yml  demo.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  versions.json
.claude/: README.md
.claude/agents/: README.md
.claude/commands/: README.md  audit-core.md  audit-full.md  audit-quick.md
.claude/guides/: README.md
.github/: AGENTS.md  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: AGENTS.md  README.md  ci.yml  codeql.yml  docs.yml  release.yml
5.10/: 404.html  index.html  objects.inv  sitemap.xml
5.10/changelog/: index.html
5.10/development/: index.html
5.10/getting-started/: index.html
5.10/how-to/: index.html
5.10/reference/: index.html
5.10/search/: search_index.json
5.10/user-guide/: index.html
5.8/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
5.8/changelog/: index.html
5.8/development/: index.html
5.8/getting-started/: index.html
5.8/how-to/: index.html
5.8/reference/: index.html
5.8/search/: search_index.json
5.8/user-guide/: index.html
5.9/: 404.html  index.html  objects.inv  sitemap.xml
5.9/changelog/: index.html
5.9/development/: index.html
5.9/getting-started/: index.html
5.9/how-to/: index.html
5.9/reference/: index.html
5.9/search/: search_index.json
5.9/user-guide/: index.html
6.0/: 404.html  index.html  sitemap.xml
6.0/changelog/: index.html
6.0/development/: index.html
6.0/getting-started/: index.html
6.0/how-to/: index.html
6.0/reference/: index.html
6.0/search/: search_index.json
6.0/user-guide/: index.html
6.1/: 404.html  index.html  objects.inv  sitemap.xml
6.1/changelog/: index.html
6.1/development/: index.html
6.1/getting-started/: index.html
6.1/how-to/: index.html
6.1/reference/: index.html
6.1/search/: search_index.json
6.1/user-guide/: index.html
6.2/: 404.html  index.html  objects.inv  sitemap.xml
6.2/changelog/: index.html
6.2/development/: index.html
6.2/getting-started/: index.html
6.2/how-to/: index.html
6.2/reference/: index.html
6.2/search/: search_index.json
6.2/user-guide/: index.html
6.3/: 404.html  index.html  objects.inv  sitemap.xml
6.3/changelog/: index.html
6.3/development/: index.html
6.3/getting-started/: index.html
6.3/how-to/: index.html
6.3/reference/: index.html
6.3/search/: search_index.json
6.3/user-guide/: index.html
6.4/: 404.html  index.html  objects.inv  sitemap.xml
6.4/changelog/: index.html
6.4/development/: index.html
6.4/getting-started/: index.html
6.4/how-to/: index.html
6.4/reference/: index.html
6.4/search/: search_index.json
6.4/user-guide/: index.html
6.5/: 404.html  index.html  objects.inv  sitemap.xml
6.5/changelog/: index.html
6.5/development/: index.html
6.5/getting-started/: index.html
6.5/how-to/: index.html
6.5/reference/: index.html
6.5/search/: search_index.json
6.5/user-guide/: index.html
6.6/: 404.html  index.html  objects.inv  sitemap.xml
6.6/changelog/: index.html
6.6/development/: index.html
6.6/getting-started/: index.html
6.6/how-to/: index.html
6.6/reference/: index.html
6.6/search/: search_index.json
6.6/user-guide/: index.html
deployments/: DEPLOYMENT_GUIDE.md  Dockerfile  README.md
deployments/_template/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml
deployments/bigbrotr/: .env.example  Dockerfile  README.md  backup.sh  docker-compose.yaml
deployments/brotr/: .env.example  README.md  docker-compose.yaml
deployments/lilbrotr/: .env.example  Dockerfile  README.md  backup.sh  docker-compose.yaml
deployments/testbrotr/: .env.example  .gitignore  README.md  backup.sh  docker-compose.yaml  gai.conf
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CONFIGURATION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  OVERVIEW.md  README.md  TECHNICAL.md  index.md
docs/_snippets/: README.md  dag-diagram.md  exception-hierarchy.md  pipeline.md  service-table.md
docs/appendices/: decision-record.md  evidence-map.md  nostr-nips-analysis.md
docs/assets/: README.md
docs/development/: README.md  coding-standards.md  contributing.md  documentation.md  index.md  setup.md  sql-templates.md  testing.md
docs/getting-started/: README.md  first-deployment.md  index.md  installation.md  quickstart.md
docs/guides/: README.md  self-hosting.md
docs/how-to/: README.md  backup-restore.md  custom-deployment.md  docker-deploy.md  index.md  manual-deploy.md  monitoring-setup.md  new-service.md  tor-relays.md  troubleshooting.md
docs/project/: current-state-guide.md  data-flow.md  glossary.md  index.md  repository-bible.md  repository-map.md
docs/reference/: core.md  index.md  models.md  nips.md  services.md  utils.md
docs/user-guide/: README.md  architecture.md  configuration.md  (+8 more)
notebooks/: test_nip11.ipynb  test_nip11.py  test_nip11_nip66.ipynb  test_nip66.ipynb  test_nip66.py  test_ssl_fallback.py  test_ssl_fallback_server.py
planning/: README.md
releases/: v3.0.0-draft.md  v3.0.0.md
src/: README.md  __init__.py  logger.py
tests/: CLAUDE.md  README.md  __init__.py  conftest.py
tools/: README.md  generate_sql.py  migrate_relay_urls.py  rebuild_analytics.py  rebuild_refresher_state.py
wiki/: 01-current-state.md  02-repository-map.md  03-architecture.md  04-data-model.md  05-services.md  06-nip85-pipeline.md  07-read-side.md  08-deployment-operations.md  09-testing-quality.md  10-documentation-maintenance.md  11-pr-readiness.md  README.md
(+2202 files in other folders)
