# =============================================================================
# Project Metadata
# =============================================================================

[project]
name = "bigbrotr"
version = "3.0.1"
description = "A modular Nostr data archiving and monitoring system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "BigBrotr Contributors" }]
keywords = [
    "nostr",
    "archiving",
    "monitoring",
    "postgresql",
    "async",
    "relay",
    "nip-11",
    "nip-66",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: System :: Archiving",
    "Topic :: System :: Monitoring",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

# =============================================================================
# Dependencies
# =============================================================================

dependencies = [
    # HTTP client with SOCKS proxy support for Tor/I2P
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.9.0",
    # Multiprocessing with async support (Synchronizer service)
    "aiomultiprocess>=0.9.1",
    # PostgreSQL async driver
    "asyncpg>=0.29.0",
    # DNS resolution (NIP-66 dns metadata)
    "dnspython>=2.5.0",
    # Geolocation (NIP-66 geo/net metadata)
    "geoip2>=4.8.0",
    "geohash2>=1.1",
    # Nostr protocol client (Rust FFI bindings)
    "nostr-sdk>=0.37.0",
    # Metrics export
    "prometheus-client>=0.20.0",
    # Configuration and validation
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
    # URL validation
    "rfc3986>=2.0.0",
    "tldextract>=5.1.0",
    # Type hints backports
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    # Linting and formatting
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "yamllint>=1.37.0",
    "sqlfluff>=3.5.0",
    # Pre-commit and security
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
    # Type stubs
    "types-PyYAML>=6.0.12",
    "asyncpg-stubs>=0.30.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/BigBrotr/bigbrotr"
Repository = "https://github.com/BigBrotr/bigbrotr"
Documentation = "https://github.com/BigBrotr/bigbrotr#readme"
Issues = "https://github.com/BigBrotr/bigbrotr/issues"
Changelog = "https://github.com/BigBrotr/bigbrotr/blob/main/CHANGELOG.md"

# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "models*", "services*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-v", "--strict-markers", "--strict-config", "-ra", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring database",
    "unit: marks tests as unit tests (no external dependencies)",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true

# =============================================================================
# Ruff Linter Configuration
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    # === Core Rules ===
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade

    # === Code Quality ===
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "TID",    # flake8-tidy-imports
    "PIE",    # flake8-pie
    "PGH",    # pygrep-hooks
    "PERF",   # perflint

    # === Security & Best Practices ===
    "S",      # flake8-bandit (security checks)
    "A",      # flake8-builtins (no shadowing builtins)
    "LOG",    # flake8-logging (logging best practices)
    "ASYNC",  # flake8-async (async antipatterns)
]

ignore = [
    # --- Type Checking Imports ---
    # Pydantic models require type annotations at runtime for validation.
    # Moving these to TYPE_CHECKING blocks would break Pydantic.
    "TC001",     # Move application import into TYPE_CHECKING block
    "TC002",     # Move third-party import into TYPE_CHECKING block
    "TC003",     # Move stdlib import into TYPE_CHECKING block

    # --- Multiprocessing Global State ---
    # Worker processes in Synchronizer need global state to share
    # database connections across tasks within the same process.
    # This is the standard pattern for aiomultiprocess workers.
    "PLW0603",   # Using global statement to update variable

    # --- Security False Positives ---
    # S310: URL open for GeoIP database downloads from known GitHub URLs.
    # These are trusted URLs for MaxMind GeoLite2 database mirrors.
    "S310",      # Audit URL open for permitted schemes

    # S311: random.uniform() for retry jitter timing.
    # Not used for cryptographic purposes, just for backoff jitter.
    "S311",      # Standard pseudo-random generators not suitable for crypto

    # --- Async Patterns ---
    # ASYNC109: Functions with timeout parameters are valid patterns
    # for asyncpg and nostr-sdk which use explicit timeout args.
    "ASYNC109",  # Async function with timeout parameter
]

# -----------------------------------------------------------------------------
# Pylint Limits
# -----------------------------------------------------------------------------
# These limits accommodate complex parsing functions and backward-compatible
# factory methods. The codebase has been optimized but some complexity is
# inherent to the domain (relay metadata parsing, event handling).

[tool.ruff.lint.pylint]
max-args = 20          # Nip66.create() has legacy backward-compat params
max-branches = 20      # Complex parsers (DNS, NIP-11, event extraction)
max-returns = 10       # Network detection functions
max-statements = 60    # Main worker functions

# -----------------------------------------------------------------------------
# Per-File Ignores
# -----------------------------------------------------------------------------
# Only tests and notebooks have special ignores. Source code follows all rules.

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",     # assert statements are expected in tests
    "S104",     # binding to all interfaces in tests
    "S105",     # hardcoded passwords in test fixtures
    "S106",     # hardcoded passwords in function args
    "S311",     # random in tests is fine
    "E501",     # long lines in test assertions
    "PLR2004",  # magic values in test assertions (expected values)
    "ARG001",   # unused function arguments (fixtures)
    "ARG002",   # unused method arguments (fixtures)
    "PLC0415",  # imports inside test functions
    "PERF401",  # list comprehensions in tests
]
"notebooks/*" = [
    "E402",     # module level import not at top
    "I001",     # import sorting
    "ERA001",   # commented code
    "F541",     # unused variables
    "W293",     # whitespace
    "SIM115",   # context manager
    "PTH108",   # os.unlink
    "PGH003",   # type: ignore without code
]

# -----------------------------------------------------------------------------
# Import Sorting
# -----------------------------------------------------------------------------

[tool.ruff.lint.isort]
known-first-party = ["core", "enums", "logger", "models", "services", "utils"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

# -----------------------------------------------------------------------------
# Formatting
# -----------------------------------------------------------------------------

[tool.ruff.format]
docstring-code-format = true

# =============================================================================
# MyPy Type Checker Configuration
# =============================================================================

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src"]
explicit_package_bases = true
strict = true
show_error_codes = true

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "nostr_sdk.*",
    "aiohttp_socks.*",
    "aiomultiprocess.*",
    "rfc3986.*",
    "geohash2.*",
    "geoip2.*",
    "dns.*",
    "prometheus_client.*",
    "tldextract.*",
]
ignore_missing_imports = true

# Entry point modules
[[tool.mypy.overrides]]
module = "__main__.*"
ignore_errors = true

# =============================================================================
# SQLFluff SQL Linter Configuration
# =============================================================================

[tool.sqlfluff.core]
dialect = "postgres"
templater = "raw"
max_line_length = 120
exclude_rules = [
    "LT05",  # Line too long (handled by max_line_length)
    "LT01",  # Trailing whitespace
    "RF06",  # Unnecessary quoted identifier
    "RF04",  # Unnecessary nested CASE
    "ST05",  # JOIN condition on same line
]

[tool.sqlfluff.indentation]
tab_space_size = 4

# SQL capitalization policies
[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.types]
capitalisation_policy = "upper"
