[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bigbrotr"
version = "3.0.4"
description = "A modular Nostr data archiving and monitoring system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "BigBrotr Contributors" }]
keywords = [
    "nostr",
    "archiving",
    "monitoring",
    "postgresql",
    "async",
    "relay",
    "nip-11",
    "nip-66",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: System :: Archiving",
    "Topic :: System :: Monitoring",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.9.0",
    "aiomultiprocess>=0.9.1",
    "asyncpg>=0.29.0",
    "dnspython>=2.5.0",
    "geoip2>=4.8.0",
    "geohash2>=1.1",
    "nostr-sdk>=0.37.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
    "rfc3986>=2.0.0",
    "tldextract>=5.1.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "yamllint>=1.37.0",
    "sqlfluff>=3.5.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
    "types-PyYAML>=6.0.12",
    "asyncpg-stubs>=0.30.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/BigBrotr/bigbrotr"
Repository = "https://github.com/BigBrotr/bigbrotr"
Documentation = "https://github.com/BigBrotr/bigbrotr#readme"
Issues = "https://github.com/BigBrotr/bigbrotr/issues"
Changelog = "https://github.com/BigBrotr/bigbrotr/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "models*", "services*", "utils*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-v", "--strict-markers", "--strict-config", "-ra", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring database",
    "unit: marks tests as unit tests (no external dependencies)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "TCH",
    "PTH",
    "ERA",
    "PL",
    "RUF",
    "TID",
    "PIE",
    "PGH",
    "PERF",
    "S",
    "A",
    "LOG",
    "ASYNC",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "S104",
    "S105",
    "S106",
    "S311",
    "E501",
    "PLR2004",
    "ARG001",
    "ARG002",
    "PLC0415",
    "PERF401",
    "ASYNC109",
    "TC001",
    "PLR0913",
]

[tool.ruff.lint.isort]
known-first-party = ["core", "models", "services", "utils"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src"]
explicit_package_bases = true
strict = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "nostr_sdk.*",
    "aiohttp_socks.*",
    "aiomultiprocess.*",
    "rfc3986.*",
    "geohash2.*",
    "geoip2.*",
    "dns.*",
    "prometheus_client.*",
    "tldextract.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "__main__.*"
ignore_errors = true

[tool.sqlfluff.core]
dialect = "postgres"
templater = "raw"
max_line_length = 120

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.types]
capitalisation_policy = "upper"
